增加实体类下划线转小驼峰示例

--- a/sf-server/src/main/resources/application.yml
+++ b/sf-server/src/main/resources/application.yml
@@ -27,7 +27,10 @@ spring:
 # mybatis配置  
 mybatis: 
     configuration: 
-         # 控制打印sql 
-         log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+        #  控制打印sql 
+        log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+        #  开启下划线转驼峰 
+        # map-underscore-to-camel-case: true
+         
         
         
