--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,4 @@ hs_err_pid*
 sf-server/src/main/java/com/pj/project/
 sf-admin/sa-resources/menu-list.js
 sf-admin/sa-html/
-sf-apidoc/
+sf-apidoc/project/
