解决idea启动报错bug

--- a/sf-server/pom.xml
+++ b/sf-server/pom.xml
@@ -98,17 +98,17 @@
         <!-- 配置资源目录  -->
     	<resources>
 			<resource>
-				<directory>src/main/Java</directory>
-				<excludes>
-					<exclude>**/*.*</exclude>
-				</excludes>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
 			</resource>
-			<resource>
-				<directory>src/main/resources</directory>
-				<includes>
-					<include>**/*.* </include>
-				</includes>
-			</resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*.*</include>
+                </includes>
+            </resource>
 		</resources>
         <plugins>
             <!-- 打包jar文件时，配置manifest文件，加入lib包的jar依赖 -->
