--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+.idea/
+
 sf-server/src/main/java/com/pj/project/
 sf-admin/sa-resources/menu-list.js
 sf-admin/sa-html/
