--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ sf-server/src/main/java/com/pj/project/
 sf-admin/sa-resources/menu-list.js
 sf-admin/sa-html/
 sf-apidoc/project/
+sf-apidoc/_sidebar.md
