--- a/sf-server/pom.xml
+++ b/sf-server/pom.xml
@@ -25,10 +25,15 @@
 		</dependency>
 
        	<!-- springboot集成 mybatis -->
-	    <dependency>
+	    <!-- <dependency>
 			<groupId>org.mybatis.spring.boot</groupId>
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.1.1</version>
+		</dependency> -->
+		<dependency>
+		    <groupId>com.baomidou</groupId>
+		    <artifactId>mybatis-plus-boot-starter</artifactId>
+		    <version>3.0.3</version>
 		</dependency>
 		
         <!-- pagehelper分页插件 -->
