--- a/sf-server/pom.xml
+++ b/sf-server/pom.xml
@@ -30,17 +30,18 @@
 			<artifactId>mybatis-spring-boot-starter</artifactId>
 			<version>2.1.1</version>
 		</dependency> -->
+       	<!-- springboot集成 mybatis-plus -->
 		<dependency>
 		    <groupId>com.baomidou</groupId>
 		    <artifactId>mybatis-plus-boot-starter</artifactId>
-		    <version>3.0.3</version>
+		    <version>3.3.2</version>
 		</dependency>
 		
         <!-- pagehelper分页插件 -->
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.2.7</version>
+            <version>1.2.13</version>
         </dependency>
         
 		<!-- mysql -->
