--- a/sf-server/pom.xml
+++ b/sf-server/pom.xml
@@ -56,6 +56,11 @@
 		    <artifactId>druid</artifactId>
 		    <version>1.1.19</version>
 		</dependency>
+		<!-- <dependency>
+	        <groupId>com.alibaba</groupId>
+	        <artifactId>druid-spring-boot-starter</artifactId>
+	        <version>1.1.10</version>
+	    </dependency> -->
 
 		<!-- 神器lombok插件 -->
 		<dependency>
