--- a/sf-server/pom.xml
+++ b/sf-server/pom.xml
@@ -51,16 +51,16 @@
 		</dependency>
 		
 		<!-- 阿里 druid 连接池  -->
-		<dependency>
+		<!-- <dependency>
 		    <groupId>com.alibaba</groupId>
 		    <artifactId>druid</artifactId>
 		    <version>1.1.19</version>
-		</dependency>
-		<!-- <dependency>
+		</dependency> -->
+		<dependency>
 	        <groupId>com.alibaba</groupId>
 	        <artifactId>druid-spring-boot-starter</artifactId>
 	        <version>1.1.10</version>
-	    </dependency> -->
+	    </dependency>
 
 		<!-- 神器lombok插件 -->
 		<dependency>
@@ -92,6 +92,10 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
         </dependency>
+        <!-- <dependency>
+		    <groupId>redis.clients</groupId>
+		    <artifactId>jedis</artifactId>
+		</dependency> -->
         
         <!--Alijson插件-->
         <dependency>
